--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -9,7 +9,7 @@ jobs:
     steps:
     - uses: actions/checkout@v3
     - name: Login the Docker image
-      run: docker login -u="redxlus" -p="${DOCKER_PASSWORD}"
+      run: docker login -u redxlus -p ${DOCKER_PASSWORD}
     - name: Build the Docker image
       run: docker build . --tag redxlus/docker-self-hosted-runner:$(date +%s)
     - name: Push the Docker image
