--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -1,8 +1,9 @@
 name: Docker Image CI
 
 on:
-  push:
-    branches: [ main ]
+  schedule:
+    - cron: "0 1 * * *"
+  workflow_dispatch:
 jobs:
   build:
     runs-on: ubuntu-latest
