--- a/selenium-chrome-mysqlclient/Dockerfile
+++ b/selenium-chrome-mysqlclient/Dockerfile
@@ -1,4 +1,4 @@
-FROM redxlus/docker-self-hosted-runner:latest-selenium-chrome-mysqlclient
+FROM redxlus/docker-self-hosted-runner:latest-selenium-chrome
 
 # Install Mysql Client
 RUN apt-get -yqq update && apt-get install -yqq --no-install-recommends default-mysql-client-core
